# balatro-demake-3ds

./: .gitignore  3ds.toolchain.cmake  CMakeLists.txt  README.md
.superpowers/brainstorm/16323-1773870571/: .events  .server-stopped  01-initial-concept.html  02-visual-mockup.html
cmake/: FindSDL2.cmake
docs/superpowers/plans/: 2026-03-23-core-run-truth.md  2026-03-24-balance-pass-implementation.md  2026-04-08-3ds-bottom-screen-gameplay.md
docs/superpowers/specs/: 2026-03-23-balatro-parity-design.md  2026-03-24-balance-pass-design.md  2026-03-25-shop-joker-inspect-design.md  2026-04-08-3ds-bottom-screen-gameplay-design.md
scripts/: generate_assets.py
src/: main.cpp
src/core/: Application.cpp  Application.h  AssetPath.cpp  AssetPath.h  ScreenRenderer.cpp  ScreenRenderer.h  State.h  StateMachine.cpp  StateMachine.h  TextRenderer.cpp  TextRenderer.h
src/game/: Card.h  CardRenderer.cpp  CardRenderer.h  Deck.cpp  Deck.h  Hand.cpp  Hand.h  HandEvaluator.cpp  HandEvaluator.h  HandType.h  Joker.cpp  Joker.h  RunState.cpp  RunState.h  ScoringAnimator.cpp  ScoringAnimator.h  ShopOffer.cpp  ShopOffer.h
src/states/: BlindSelectState.cpp  BlindSelectState.h  GameplayHudStyle.cpp  GameplayHudStyle.h  GameplayLayout.cpp  GameplayLayout.h  GameplayState.cpp  GameplayState.h  ShopLayout.cpp  ShopLayout.h  ShopState.cpp  ShopState.h  TitleState.cpp  TitleState.h
tests/: AssetPathTests.cpp  CardRendererSpriteSheetTests.cpp  GameplayHudStyleTests.cpp  GameplayLayoutTests.cpp  HandEvaluatorTests.cpp  HandTests.cpp  JokerTests.cpp  RunStateTests.cpp  ScoringAnimatorTests.cpp  ShopLayoutTests.cpp  ShopOfferTests.cpp  TextRendererTests.cpp
